RM-6746 cherry picking merge request from RM-6790